@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.016.
-.TH MBCHK "1" "October 1999" "GNU GRUB 0.5.94" FSF
+.TH MBCHK "1" "November 1999" "mbchk (GNU GRUB 0.5.94)" FSF
 .SH NAME
 mbchk \- check the format of a Multiboot kernel
 .SH SYNOPSIS
