@@ -1,3 +1,13 @@
+1999-11-18  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>
+
+	* configure.in: Output grub-install.
+	* util/Makefile.am (sbin_SCRIPTS): New variable.
+	* util/grub-install.in: New file.
+	* docs/Makefile.am (man_MANS): Added grub-install.8.
+	[MAINTAINER_MODE] ($(srcdir)/grub-install.8): New target.
+	* docs/grub-install.8: New file. Generated by help2man.
+	* docs/user-ref.texi (Invoking grub-install): New chapter.
+	
 1999-11-16  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>
 
 	From Pavel Roskin:
